--- a/Lab3/WebContent/css/structure.css
+++ b/Lab3/WebContent/css/structure.css
@@ -14,25 +14,90 @@
 body {
  font-family: Arial, Helvetica, sans-serif;
  font-size: 13px;
+ background: #fff;
 }
 #wrapper { 
  margin: 0 auto;
- width: 922px;
+ width: 100%;
 }
 #faux {
  background: url(faux-2-3-col.gif);
  margin-bottom: 0px;
  overflow: auto; /* Paul O Brien Fix for IE www.pmob.co.uk */
- width: 100%
+ width: 100%;
 }
-#header {
- color: #333;
- width: 902px;
- padding: 10px;
- height: 100px;
- margin: 10px 0px 0px 0px;
- background: #D1DBDB;
+
+/*HEADER------------------------*/
+
+.navbar, .dropdown-menu{
+	background:#09ba32;
+	border: none;
 }
+
+.nav>li>a, .dropdown-menu>li>a:focus, .dropdown-menu>li>a:hover, .dropdown-menu>li>a, .dropdown-menu>li{
+  border-bottom: 3px solid transparent;
+}
+.nav>li>a:focus, .nav>li>a:hover,.nav .open>a, .nav .open>a:focus, .nav .open>a:hover, .dropdown-menu>li>a:focus, .dropdown-menu>li>a:hover{
+  border-bottom: 3px solid transparent;
+  background: rgba(154, 154, 154, 0.27);
+}
+.navbar a, .dropdown-menu>li>a, .dropdown-menu>li>a:focus, .dropdown-menu>li>a:hover, .navbar-toggle{
+ color: #fff;
+}
+.dropdown-menu{
+      -webkit-box-shadow: none;
+    box-shadow:none;
+}
+.nav li{
+	border-bottom: transparent 4px solid;
+}
+
+.nav li:hover:nth-child(8n+1), .nav li.active:nth-child(8n+1){	/* Colores al seleccionar */
+  border-bottom: #b6f423 4px solid;
+}
+.nav li:hover:nth-child(8n+2), .nav li.active:nth-child(8n+2){
+  border-bottom: #82e2ea 4px solid;
+}
+.nav li:hover:nth-child(8n+3), .nav li.active:nth-child(8n+3){
+  border-bottom: #f8b42c 4px solid;
+}
+.nav li:hover:nth-child(8n+4), .nav li.active:nth-child(8n+4){
+  border-bottom: #fd594a 4px solid;
+}	
+.nav li:hover:nth-child(8n+5), .nav li.active:nth-child(8n+5){
+  border-bottom: #e8479d 4px solid;
+}
+.nav li:hover:nth-child(8n+6), .nav li.active:nth-child(8n+6){
+  border-bottom: #a12eeb 4px solid;
+}
+.nav li:hover:nth-child(8n+7), .nav li.active:nth-child(8n+7){
+  border-bottom: #4785d9 4px solid;
+}
+.nav li:hover:nth-child(8n+8), .nav li.active:nth-child(8n+8){
+  border-bottom: #2aed9a 4px solid;
+}
+
+.navbar-toggle .icon-bar{
+    color: #fff;
+    background: #000000;
+}
+
+#header{
+	
+}
+/*END_HEADER------------------------*/
+/*LOGIN---------------------------*/
+.colorgraph { /* Colores para la barra multicolor del login*/
+  height: 5px;
+  border-top: 0;
+  background: #c4e17f;
+  border-radius: 5px;
+  background-image: -webkit-linear-gradient(left, #c4e17f, #c4e17f 12.5%, #f7fdca 12.5%, #f7fdca 25%, #fecf71 25%, #fecf71 37.5%, #f0776c 37.5%, #f0776c 50%, #db9dbe 50%, #db9dbe 62.5%, #c49cde 62.5%, #c49cde 75%, #669ae1 75%, #669ae1 87.5%, #62c2e4 87.5%, #62c2e4);
+  background-image: -moz-linear-gradient(left, #c4e17f, #c4e17f 12.5%, #f7fdca 12.5%, #f7fdca 25%, #fecf71 25%, #fecf71 37.5%, #f0776c 37.5%, #f0776c 50%, #db9dbe 50%, #db9dbe 62.5%, #c49cde 62.5%, #c49cde 75%, #669ae1 75%, #669ae1 87.5%, #62c2e4 87.5%, #62c2e4);
+  background-image: -o-linear-gradient(left, #c4e17f, #c4e17f 12.5%, #f7fdca 12.5%, #f7fdca 25%, #fecf71 25%, #fecf71 37.5%, #f0776c 37.5%, #f0776c 50%, #db9dbe 50%, #db9dbe 62.5%, #c49cde 62.5%, #c49cde 75%, #669ae1 75%, #669ae1 87.5%, #62c2e4 87.5%, #62c2e4);
+  background-image: linear-gradient(to right, #c4e17f, #c4e17f 12.5%, #f7fdca 12.5%, #f7fdca 25%, #fecf71 25%, #fecf71 37.5%, #f0776c 37.5%, #f0776c 50%, #db9dbe 50%, #db9dbe 62.5%, #c49cde 62.5%, #c49cde 75%, #669ae1 75%, #669ae1 87.5%, #62c2e4 87.5%, #62c2e4);
+}
+/*END_LOGIN-------------------------------*/
 #navigation {
  color: #333;
  padding: 10px;
@@ -48,13 +113,8 @@ body {
  float: left;
 }
 #content { 
- float: left;
- color: #333;
- margin: 10px 13px;
- padding: 0px;
- width: 460px;
- display: inline;
- position: relative;
+	width:100%;
+	height:100%;
 }
 #rightcolumn { 
  display: inline;
@@ -65,6 +125,7 @@ body {
  width: 195px;
  float: right;
 }
+/*
 #footer { 
  width: 902px;
  clear: both;
@@ -72,5 +133,4 @@ body {
  background: #ABBEBE;
  margin: 0px 0px 10px 0px;
  padding: 10px;
-}
-.clear { clear: both; background: none; }
+}*/
