--- a/Lab3/WebContent/css/structure.css
+++ b/Lab3/WebContent/css/structure.css
@@ -9,12 +9,19 @@
 	  
 */
 
-* { padding: 0; margin: 0; }
+* { padding: 0; margin: 0;}
 
 body {
  font-family: Arial, Helvetica, sans-serif;
  font-size: 13px;
- background: #fff;
+background:
+radial-gradient(circle farthest-side at 0% 50%,#fb1 23.5%,rgba(240,166,17,0) 0)21px 30px,
+radial-gradient(circle farthest-side at 0% 50%,#B71 24%,rgba(240,166,17,0) 0)19px 30px,
+linear-gradient(#fb1 14%,rgba(240,166,17,0.5) 0, rgba(240,166,17,0) 85%,#fb1 0)0 0,
+linear-gradient(150deg,#fb1 24%,#B71 0,#B71 26%,rgba(240,166,17,0.5) 0,rgba(240,166,17,0.5) 74%,#B71 0,#B71 76%,#fb1 0)0 0,
+linear-gradient(30deg,#fb1 24%,#B71 0,#B71 26%,rgba(240,166,17,0.5) 0,rgba(240,166,17,0.5) 74%,#B71 0,#B71 76%,#fb1 0)0 0,
+linear-gradient(90deg,#B71 2%,#fb1 0,#fb1 98%,#B71 0%)0 0 #fb1;
+background-size:40px 60px;
 }
 #wrapper { 
  margin: 0 auto;
@@ -28,10 +35,16 @@ body {
 }
 
 /*HEADER------------------------*/
+.full_bar_style{
+	width:100% !important; 
+	min-height:58px;
+	background:#09ba32;
+	margin: 0px 0px 0px 0px;
+}
 
 .navbar, .dropdown-menu{
-	background:#09ba32;
 	border: none;
+	background:#09ba32;
 }
 
 .nav>li>a, .dropdown-menu>li>a:focus, .dropdown-menu>li>a:hover, .dropdown-menu>li>a, .dropdown-menu>li{
@@ -98,12 +111,15 @@ body {
   background-image: linear-gradient(to right, #c4e17f, #c4e17f 12.5%, #f7fdca 12.5%, #f7fdca 25%, #fecf71 25%, #fecf71 37.5%, #f0776c 37.5%, #f0776c 50%, #db9dbe 50%, #db9dbe 62.5%, #c49cde 62.5%, #c49cde 75%, #669ae1 75%, #669ae1 87.5%, #62c2e4 87.5%, #62c2e4);
 }
 /*END_LOGIN-------------------------------*/
-#navigation {
- color: #333;
- padding: 10px;
- margin: 0px 0px 0px 0px;
- background: #ABBEBE;
+/*REGISTER--------------------------_*/
+
+/*END_REGISTER--------------------*/
+.center_container{
+	margin-top:60px;
+	height:100%;
+	backgound-color:#fff !important;
 }
+
 #leftcolumn { 
  display: inline;
  color: #333;
