--- a/Lab3/WebContent/css/structure.css
+++ b/Lab3/WebContent/css/structure.css
@@ -1,37 +1,26 @@
-/*
-      Created by Keith Donegan of Code-Sucks.com
-	  
-	  E-Mail: Keithdonegan@gmail.com
-	  
-	  You can do whatever you want with these layouts,
-	  but it would be greatly appreciated if you gave a link
-	  back to http://www.code-sucks.com
-	  
-*/
-
 * { padding: 0; margin: 0;}
 
-body {
- font-family: Arial, Helvetica, sans-serif;
- font-size: 13px;
-background:
-radial-gradient(circle farthest-side at 0% 50%,#fb1 23.5%,rgba(240,166,17,0) 0)21px 30px,
-radial-gradient(circle farthest-side at 0% 50%,#B71 24%,rgba(240,166,17,0) 0)19px 30px,
-linear-gradient(#fb1 14%,rgba(240,166,17,0.5) 0, rgba(240,166,17,0) 85%,#fb1 0)0 0,
-linear-gradient(150deg,#fb1 24%,#B71 0,#B71 26%,rgba(240,166,17,0.5) 0,rgba(240,166,17,0.5) 74%,#B71 0,#B71 76%,#fb1 0)0 0,
-linear-gradient(30deg,#fb1 24%,#B71 0,#B71 26%,rgba(240,166,17,0.5) 0,rgba(240,166,17,0.5) 74%,#B71 0,#B71 76%,#fb1 0)0 0,
-linear-gradient(90deg,#B71 2%,#fb1 0,#fb1 98%,#B71 0%)0 0 #fb1;
-background-size:40px 60px;
+html,body{
+	height:100%;
 }
-#wrapper { 
- margin: 0 auto;
- width: 100%;
+#wrapper {
+	height:100%;
+	width: 100%;
+	margin: 0 auto;
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 13px;
+	background-color:rgb(245, 248, 250);
+}
+
+a:hover{
+	cursor:pointer;
 }
 #faux {
  background: url(faux-2-3-col.gif);
  margin-bottom: 0px;
  overflow: auto; /* Paul O Brien Fix for IE www.pmob.co.uk */
  width: 100%;
+ height:100%;
 }
 
 /*HEADER------------------------*/
@@ -65,28 +54,28 @@ background-size:40px 60px;
 	border-bottom: transparent 4px solid;
 }
 
-.nav li:hover:nth-child(8n+1), .nav li.active:nth-child(8n+1){	/* Colores al seleccionar */
+.nav li:hover:nth-child(8n+1){	/* Colores al seleccionar */
   border-bottom: #b6f423 4px solid;
 }
-.nav li:hover:nth-child(8n+2), .nav li.active:nth-child(8n+2){
+.nav li:hover:nth-child(8n+2){
   border-bottom: #82e2ea 4px solid;
 }
-.nav li:hover:nth-child(8n+3), .nav li.active:nth-child(8n+3){
+.nav li:hover:nth-child(8n+3){
   border-bottom: #f8b42c 4px solid;
 }
-.nav li:hover:nth-child(8n+4), .nav li.active:nth-child(8n+4){
+.nav li:hover:nth-child(8n+4){
   border-bottom: #fd594a 4px solid;
 }	
-.nav li:hover:nth-child(8n+5), .nav li.active:nth-child(8n+5){
+.nav li:hover:nth-child(8n+5){
   border-bottom: #e8479d 4px solid;
 }
-.nav li:hover:nth-child(8n+6), .nav li.active:nth-child(8n+6){
+.nav li:hover:nth-child(8n+6){
   border-bottom: #a12eeb 4px solid;
 }
-.nav li:hover:nth-child(8n+7), .nav li.active:nth-child(8n+7){
+.nav li:hover:nth-child(8n+7){
   border-bottom: #4785d9 4px solid;
 }
-.nav li:hover:nth-child(8n+8), .nav li.active:nth-child(8n+8){
+.nav li:hover:nth-child(8n+8){
   border-bottom: #2aed9a 4px solid;
 }
 
@@ -117,7 +106,6 @@ background-size:40px 60px;
 .center_container{
 	margin-top:60px;
 	height:100%;
-	backgound-color:#fff !important;
 }
 
 #leftcolumn { 
