--- a/Lab3/WebContent/css/structure.css
+++ b/Lab3/WebContent/css/structure.css
@@ -121,65 +121,49 @@ a:hover{
 }
 
 /*TWEET CARACTERISTICS-------------------*/
-.chat
-{
-	background-color:rgb(245, 248, 250);
-    list-style: none;
-    margin: 0;
-    padding: 0;
+.tweet{
+	border: 1px solid gray;
+	border-radius: 5px;
+	margin:10px;
+	padding: 10px;
+	
 }
 
-.chat li
-{
-    margin-bottom: 10px;
-    padding-bottom: 5px;
-    border-bottom: 1px dotted #B3A9A9;
+.tweet a{
+	color: green;
 }
 
-.chat li.left .chat-body
-{
-    margin-left: 60px;
+.tweet a:hover{
+	color: darkgreen;
 }
 
-.chat li.right .chat-body
-{
-    margin-right: 60px;
+.tweet:hover{
+	background-color:#f5f8fa;
 }
 
-
-.chat li .chat-body p
-{
-    margin: 0;
-    color: #777777;
+.flex-heading-container {
+    display: -webkit-flex;
+    display: flex;
+    padding-bottom:10px;
 }
 
-.panel .slidedown .glyphicon, .chat .glyphicon
-{
-    margin-right: 5px;
+.flex-image {
+    height:64px;
+    width:64px;
+    margin-right:10px;
+	vertical-align: middle;
+	border:1px solid lightgray;
+	border-radius:5px;
 }
 
-.panel-body
-{
-    overflow-y: scroll;
-    height: 250px;
+img:hover {
+   -webkit-filter: saturate(3.3); 
+   cursor:pointer;
 }
 
-::-webkit-scrollbar-track
-{
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-    background-color: #F5F5F5;
-}
-
-::-webkit-scrollbar
-{
-    width: 12px;
-    background-color: #F5F5F5;
-}
-
-::-webkit-scrollbar-thumb
-{
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
-    background-color: #555;
+.like-tweet:hover{
+	background-color:#ddffce;
+	border-radius:3px;
 }
 
 /*END TWEET CARACTERISTICS-------------------*/
