--- a/Lab3/WebContent/css/structure.css
+++ b/Lab3/WebContent/css/structure.css
@@ -97,9 +97,11 @@ a:hover{
   background-image: linear-gradient(to right, #c4e17f, #c4e17f 12.5%, #f7fdca 12.5%, #f7fdca 25%, #fecf71 25%, #fecf71 37.5%, #f0776c 37.5%, #f0776c 50%, #db9dbe 50%, #db9dbe 62.5%, #c49cde 62.5%, #c49cde 75%, #669ae1 75%, #669ae1 87.5%, #62c2e4 87.5%, #62c2e4);
 }
 /*END_LOGIN-------------------------------*/
+.container{
+	margin-top: 48px;	
+}
 
 .center_container{
-	margin-top:60px;
 	height:100%;
 }
 
@@ -113,7 +115,6 @@ a:hover{
 }
 #content { 
 	width:100%;
-	height:100%;
 }
 #rightcolumn { 
  display: inline;
