--- a/Lab3/WebContent/css/MDB_Free/css/addons_mdb.css
+++ b/Lab3/WebContent/css/MDB_Free/css/addons_mdb.css
@@ -80,6 +80,7 @@
 	-webkit-box-direction:normal;
 	-webkit-tap-highlight-color:rgba(0, 0, 0, 0);
 }
+
 .card .card-data ul li,.card .card-review ul li {
 	display:inline
 }
@@ -106,4 +107,30 @@
 }
 .card .card-data ul li .fa-clock-o {
 	margin-left:10px
+}
+
+
+.btn-floating {
+    position: relative;
+    overflow: hidden;
+    z-index: 1;
+    width: 37px;
+    height: 37px;
+    padding: 0;
+    background-color: #a6c;
+    border-radius: 50%;
+    -webkit-transition: .3s;
+    transition: .3s;
+    margin: 10px;
+    box-shadow: 0 2px 5px 0 rgba(0,0,0,.16), 0 2px 10px 0 rgba(0,0,0,.12);
+    text-align: center !important;
+    cursor: pointer;
+}
+
+.btn-floating, .btn-floating i {
+    display: inline-block;
+    line-height: 37px;
+    color: #fff;
+    vertical-align: middle;
+    font-size:1.1em;
 }
