--- a/Lab3/WebContent/css/structure.css
+++ b/Lab3/WebContent/css/structure.css
@@ -1,20 +1,7 @@
 * { padding: 0; margin: 0;}
 
-html,body{
-	height:100%;
-}
-
 .btn{
 	cursor:pointer;	
-}
-
-#wrapper {
-	height:100%;
-	width: 100%;
-	margin: 0 auto;
-	font-family: Arial, Helvetica, sans-serif;
-	font-size: 13px;
-	background-color:rgb(245, 248, 250);
 }
 
 a:hover{
@@ -25,7 +12,6 @@ a:hover{
  margin-bottom: 0px;
  overflow: auto; /* Paul O Brien Fix for IE www.pmob.co.uk */
  width: 100%;
- height:100%;
 }
 
 /*HEADER------------------------*/
@@ -109,10 +95,13 @@ a:hover{
  margin: 10px;
  padding: 0px;
  width: 195px;
- float: left;
+ float: left;	
 }
 #content { 
 	width:100%;
+	margin: 0 auto;
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 13px;
 }
 #rightcolumn { 
  display: inline;
@@ -172,10 +161,29 @@ img:hover {
 
 /*END TWEET CARACTERISTICS-------------------*/
 
-/* START USER PROFILE -------------------------*/
+.follow-button{
+	color:white;
+	text-align:center;
+	position: absolute !important;
+}
 
+/* START USER PROFILE -------------------------*/
 .statics-resume{
-	
+	padding:0px;
+	margin:0px;
+	width:100%;
+	display:inline-block;	
+} 
+
+.resume-statics{
+	float:left;
+	width:33.3%;
+	text-align:center;
+}
+
+.follow-user-card{
+	right:7px !important;
+	top:7px !important;
 }
 
 /* END USER PROFILE --------------------------- */
