--- a/Lab3/WebContent/css/MDB_Free/css/addons_mdb.css
+++ b/Lab3/WebContent/css/MDB_Free/css/addons_mdb.css
@@ -80,3 +80,30 @@
 	-webkit-box-direction:normal;
 	-webkit-tap-highlight-color:rgba(0, 0, 0, 0);
 }
+.card .card-data ul li,.card .card-review ul li {
+	display:inline
+}
+.card .card-data {
+	background-color:#3E4551;
+	color:#fff;
+	text-align:center;
+	height:auto;
+	padding:10px
+}
+.card .card-data ul {
+	margin-bottom:0;
+	font-size:.9rem
+}
+.card .card-data ul li .fa-clock-o {
+	margin-left:10px
+}
+.card .card-data ul a {
+	color:#fff
+}
+.card .card-data ul a .fa {
+	margin-left:5px;
+	margin-right:3px
+}
+.card .card-data ul li .fa-clock-o {
+	margin-left:10px
+}
