--- a/Lab3/WebContent/css/structure.css
+++ b/Lab3/WebContent/css/structure.css
@@ -188,7 +188,26 @@ img:hover {
 
 /* END USER PROFILE --------------------------- */
 
+/* USER LIST -----------------------------------*/
 
+.user-list-item{
+	box-shadow: 0 2px 5px 0 rgba(0,0,0,.16), 0 2px 10px 0 rgba(0,0,0,.12);
+}
+
+.metrics>li{
+	padding-right:7px;
+	font-size:1.2em;
+	cursor: help;
+}
+.metrics>li>i{
+	text-shadow: 2px 2px 2px #ccc;
+}
+.media-body>h6{
+	text-decoration: underline;
+}
+.metrics>li>.badge{
+	margin-left:5px;
+}
 
 
 
