Go to user profile

--- a/Lab3/WebContent/css/structure.css
+++ b/Lab3/WebContent/css/structure.css
@@ -195,7 +195,12 @@ img:hover {
 /* USER LIST -----------------------------------*/
 
 .user-list-item{
-	box-shadow: 0 2px 5px 0 rgba(0,0,0,.16), 0 2px 10px 0 rgba(0,0,0,.12);
+	box-shadow: 0 2px 5px 0 rgba(0,0,0,.16), 0 2px 10px 0 rgba(0,0,0,.12);	
+}
+
+.user-list-item:hover{
+	background-color:#DCD7FF!important;
+	cursor:pointer;
 }
 
 .metrics>li{
