--- a/Lab3/WebContent/css/structure.css
+++ b/Lab3/WebContent/css/structure.css
@@ -190,6 +190,11 @@ img:hover {
 	top:7px !important;
 }
 
+.delete-user-card {
+	right:120px !important;
+	top:7px !important;
+}
+
 /* END USER PROFILE --------------------------- */
 
 /* USER LIST -----------------------------------*/
